# Bootcamp-Python

./: .gitignore  README.md  pyproject.toml
Aula_01/: desafio_1.py  exercicio_01.py  exercicio_02.py
Aula_02/: desafio_02.py  exercicios_aula02.py
Aula_03/: desafio_03.py  exercicios_aula03.py
Aula_04/: exercicios_04.py
Aula_07/: desafio.py  exercicio_07.py
Aula_08/: treino_08.py
