[project]
name = "bootcamp-python"
version = "0.1.0"
description = ""
authors = [
    {name = "EriickHenriique",email = "eriickhenriique.s.silva@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13 <4.0"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "python = ">=3.13 <4.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

